fix margin on small screen sizes

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -47,6 +47,10 @@
     grid-template-rows: repeat(2, auto);
   }
 
+  .footer__social {
+    margin-bottom: 0;
+  }
+
   .footer__copy {
     margin: 0;
   }
